--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "bootstrap.js",
   "scripts": {
     "start": "node bootstrap.js",
+    "job": "node scripts/startBomb.js",
+    "reset": "node scripts/resetAccounts.js",
     "lint": "standard --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,10 +17,13 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@mtproto/core": "5.3.0",
+    "console-stamp": "^0.2.9",
     "dotenv": "^8.2.0",
+    "figlet": "^1.5.0",
     "knex": "^0.21.17",
     "moment": "^2.29.1",
     "node-cron": "^2.0.3",
+    "shortid": "^2.2.16",
     "sqlite3": "^5.0.1"
   },
   "devDependencies": {
